--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Optimize to following code\n",
-    "def jump_game(array):\n",
+    "def slow_jump_game(array):\n",
     "    if len(array) <= 1:\n",
     "        return 0\n",
     "\n",
@@ -63,6 +63,19 @@
     "    \n",
     "    return m \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8a3b049",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def jump_game(array):\n",
+    "    '''PUT YOU CODE INSIDE THIS FUNCTION'''\n",
+    "\n",
+    "    return array"
    ]
   },
   {
@@ -102,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.5"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false,
