different version for I-PS

--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -29,7 +29,7 @@
    "id": "9883ba75",
    "metadata": {},
    "source": [
-    "We will give you a correct version of the code that is too slow. Can you optimize it and then pass the tests ?"
+    "Can you create a solution that passes all the tests ?"
    ]
   },
   {
@@ -41,28 +41,6 @@
    "source": [
     "# First run this cell\n",
     "from test_utils import test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "4fe3c744",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Optimize to following code\n",
-    "def slow_jump_game(array):\n",
-    "    if len(array) <= 1:\n",
-    "        return 0\n",
-    "\n",
-    "    m = float('inf')\n",
-    "    steps = array[0]\n",
-    "    for i in range(1, steps + 1):\n",
-    "        if(i < len(array)):\n",
-    "            m = min(m, 1 + jump_game(array[i:]))\n",
-    "    \n",
-    "    return m \n",
-    "    "
    ]
   },
   {
