--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -21,8 +21,15 @@
     "\n",
     "**ouput** : 2\n",
     "\n",
+    "<img src=\"jumpgame.jpeg\" width=\"500\"/>\n",
+    "\n",
     "**explanation** : Jump 1 step from index 0 to 1, then 3 steps to the last index"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
