--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -28,11 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "9883ba75",
    "metadata": {},
    "source": [
@@ -66,7 +61,7 @@
     "    steps = array[0]\n",
     "    for i in range(1, steps + 1):\n",
     "        if(i < len(array)):\n",
-    "            m = min(m, 1 + jump_game(array[i:]))\n",
+    "            m = min(m, 1 + slow_jump_game(array[i:]))\n",
     "    \n",
     "    return m \n",
     "    "
