added time submission

--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "# First run this cell\n",
-    "from test_utils import test"
+    "from test_utils import test, due_time\n",
+    "due_time()"
    ]
   },
   {
