add gitignore and clear outputs

--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "d3893c62",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "4fe3c744",
    "metadata": {},
    "outputs": [],
@@ -83,19 +83,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "9bb22fc4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Your implementation failed 1 test(s) out of 4 tests\n",
-      "    ❌ 1 test was too slow \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this cell to verify your solution\n",
     "test(jump_game)"
@@ -104,7 +95,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python3",
    "language": "python",
    "name": "python3"
   },
