--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d3893c62",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook by  22:56:47\n"
+      "Please upload this notebook by  23:31:17\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9bb22fc4",
    "metadata": {},
    "outputs": [
@@ -102,17 +102,37 @@
       "❌ Your implementation failed 5 test(s) out of 5 tests\n",
       "    ✅ but you implementation is fast enough 🚀.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {
+      "text/html": {
+       "my_var": 0
+      }
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Run this cell to verify your solution\n",
-    "test(jump_game)"
+    "test(jump_game)\n",
+    "from IPython.display import HTML\n",
+    "metadata = {\"my_var\": 0}\n",
+    "HTML(data=\"<br>\", metadata=metadata)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.9 ('compvis')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
