--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -36,19 +36,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d3893c62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please upload this notebook by  11:55:03\n"
+     ]
+    }
+   ],
    "source": [
     "# First run this cell\n",
     "from test_utils import test, due_time\n",
-    "due_time()"
+    "due_time()\n",
+    "n = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4fe3c744",
    "metadata": {},
    "outputs": [],
@@ -70,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -83,13 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9bb22fc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Your implementation failed 5 test(s) out of 5 tests\n",
+      "    ✅ but you implementation is fast enough 🚀.\n",
+      "Stored 'n' (int)\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to verify your solution\n",
-    "test(jump_game)"
+    "n += 1\n",
+    "test(jump_game)\n",
+    "%store n"
    ]
   }
  ],
