add logs for tests and fix the due time

--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -36,28 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d3893c62",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please upload this notebook by  11:55:03\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First run this cell\n",
-    "from test_utils import test, due_time\n",
-    "due_time()\n",
-    "n = 0"
+    "from test_utils import test, due_time, d\n",
+    "due_time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4fe3c744",
    "metadata": {},
    "outputs": [],
@@ -79,11 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Don't forget to run this cell before you test you implementation with the cell below\n",
     "def jump_game(array):\n",
     "    '''PUT YOU CODE INSIDE THIS FUNCTION'''\n",
     "\n",
@@ -92,25 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9bb22fc4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Your implementation failed 5 test(s) out of 5 tests\n",
-      "    ✅ but you implementation is fast enough 🚀.\n",
-      "Stored 'n' (int)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this cell to verify your solution\n",
-    "n += 1\n",
-    "test(jump_game)\n",
-    "%store n"
+    "test(jump_game)"
    ]
   }
  ],
