change order of cells and clear the db

--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -2,16 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e7e548e6",
+   "metadata": {},
+   "source": [
+    "# Problem solving\n",
+    "\n",
+    "Today you will try to find solutions to the **Jump Game**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3893c62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First run this cell\n",
+    "from test_utils import test, due_time, d\n",
+    "due_time()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7fb31f7a-21c0-4288-ab8b-30e7eaf026b2",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# Problem description\n",
-    "\n",
-    "Today you will try to find solutions to the **Jump Game**. \n",
-    "\n",
-    "## Jump game\n",
+    "## Problem description - Jump game\n",
     "\n",
     "Given an array in python where each element represents the maximum number of steps that can be taken forward from the current index, the goal is to determine the minimum number of jumps needed to reach the end of the array or beyond, starting from index 0.\n",
     "\n",
@@ -31,19 +49,7 @@
    "id": "9883ba75",
    "metadata": {},
    "source": [
-    "We will give you a correct version of the code that is too slow. Can you optimize it and then pass the tests ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3893c62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# First run this cell\n",
-    "from test_utils import test, due_time, d\n",
-    "due_time()"
+    "A correct version of the code is given below but it is too slow. Can you optimize it and then pass the tests ?"
    ]
   },
   {
@@ -53,7 +59,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Optimize to following code\n",
     "def slow_jump_game(array):\n",
     "    if len(array) <= 1:\n",
     "        return 0\n",
@@ -64,8 +69,15 @@
     "        if(i < len(array)):\n",
     "            m = min(m, 1 + slow_jump_game(array[i:]))\n",
     "    \n",
-    "    return m \n",
-    "    "
+    "    return m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6784bef9",
+   "metadata": {},
+   "source": [
+    "Implement you solution on the cell below and test you code."
    ]
   },
   {
