test HTML metadata

--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -12,10 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d3893c62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please upload this notebook on Moodle by 20:22:12.\n"
+     ]
+    }
+   ],
    "source": [
     "# First run this cell\n",
     "from test_utils import test, due_time, d\n",
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -96,10 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9bb22fc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Your implementation failed 5 test(s) out of 5 tests\n",
+      "    ✅ but you implementation is fast enough 🚀.\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell to verify your solution\n",
     "test(jump_game)"
