--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d3893c62",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 20:26:53.\n"
+      "Please upload this notebook on Moodle by 20:35:08.\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9bb22fc4",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
      "text": [
       "❌ Your implementation failed 5 test(s) out of 5 tests\n",
       "    ✅ but you implementation is fast enough 🚀.\n",
-      "{'n': 3, 1: {'fcount': 5, 'ftime': 0, 'time': datetime.datetime(2023, 11, 15, 20, 17, 5, 175786)}, 2: {'fcount': 5, 'ftime': 0, 'time': datetime.datetime(2023, 11, 15, 20, 17, 21, 328925)}, 3: {'fcount': 5, 'ftime': 0, 'time': datetime.datetime(2023, 11, 15, 20, 17, 26, 98491)}}\n"
+      "{'n': 1, 1: {'fcount': 5, 'ftime': 0, 'time': datetime.datetime(2023, 11, 15, 20, 25, 30, 251471)}}\n"
      ]
     }
    ],
@@ -122,6 +122,14 @@
     "# Run this cell to verify your solution\n",
     "test(jump_game)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12747f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
