--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d3893c62",
    "metadata": {},
    "outputs": [
@@ -20,12 +20,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 20:35:08.\n"
+      "Please upload this notebook on Moodle by 20:44:24.\n"
      ]
     }
    ],
    "source": [
     "# First run this cell\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "from test_utils import test, due_time, d\n",
     "due_time()"
    ]
@@ -90,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9bb22fc4",
    "metadata": {},
    "outputs": [
@@ -113,8 +115,7 @@
      "output_type": "stream",
      "text": [
       "❌ Your implementation failed 5 test(s) out of 5 tests\n",
-      "    ✅ but you implementation is fast enough 🚀.\n",
-      "{'n': 1, 1: {'fcount': 5, 'ftime': 0, 'time': datetime.datetime(2023, 11, 15, 20, 25, 30, 251471)}}\n"
+      "    ✅ but you implementation is fast enough 🚀.\n"
      ]
     }
    ],
