--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 20:44:24.\n"
+      "Please upload this notebook on Moodle by 21:46:30.\n"
      ]
     }
    ],
@@ -117,6 +117,16 @@
       "❌ Your implementation failed 5 test(s) out of 5 tests\n",
       "    ✅ but you implementation is fast enough 🚀.\n"
      ]
+    },
+    {
+     "data": {
+      "application/javascript": "\n        require.undef('setTags');\n        define('setTags', function() {\n            return function(element, tags) {\n                var cell_element = element.parents('.cell');\n                var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n                var cell = Jupyter.notebook.get_cell(index);\n                cell.metadata.perso = tags;\n            }\n        });\n        require(['setTags'], function(setTags) {\n            setTags(element, {\"hello\": \"1\"});\n        });\n        ",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -130,10 +140,85 @@
    "id": "12747f2c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "require.undef('setTags');\n",
+    "define('setTags', function() {\n",
+    "    return function(element, tags) {\n",
+    "        var cell_element = element.parents('.cell');\n",
+    "        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
+    "        var cell = Jupyter.notebook.get_cell(index);\n",
+    "        cell.metadata.tags = tags;\n",
+    "    }\n",
+    "});"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed95178d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.magic import register_cell_magic, register_line_cell_magic\n",
+    "from IPython.display import Javascript, display\n",
+    "import json\n",
+    "\n",
+    "def _set_tags(tags):\n",
+    "    assert all(map(lambda t: isinstance(t, str), tags))\n",
+    "    display(Javascript(\n",
+    "        \"\"\"\n",
+    "        require(['setTags'], function(setTags) {\n",
+    "            setTags(element, %s);\n",
+    "        });\n",
+    "        \"\"\" % json.dumps(tags)\n",
+    "    ))\n",
+    "\n",
+    "@register_line_cell_magic\n",
+    "def tag(line, cell=None):\n",
+    "    _set_tags(line.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "547c4b2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93f9522f",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%tag remove-cell\n",
+    "print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a52b8aa",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
