--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 21:56:41.\n"
+      "Please upload this notebook on Moodle by 22:02:20.\n"
      ]
     }
    ],
@@ -30,6 +30,36 @@
     "%autoreload 2\n",
     "from test_utils import test, due_time, d\n",
     "due_time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3e43a47e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "require.undef('setTags');\ndefine('setTags', function() {\n    return function(element, tags) {\n        var cell_element = element.parents('.cell');\n        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n        var cell = Jupyter.notebook.get_cell(index);\n        cell.metadata.tags = tags;\n    }\n});\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "require.undef('setTags');\n",
+    "define('setTags', function() {\n",
+    "    return function(element, tags) {\n",
+    "        var cell_element = element.parents('.cell');\n",
+    "        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
+    "        var cell = Jupyter.notebook.get_cell(index);\n",
+    "        cell.metadata.tags = tags;\n",
+    "    }\n",
+    "});"
    ]
   },
   {
@@ -92,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -106,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9bb22fc4",
    "metadata": {},
    "outputs": [
@@ -120,7 +150,7 @@
     },
     {
      "data": {
-      "application/javascript": "\n        require.undef('setTags');\n        define('setTags', function() {\n            return function(element, tags) {\n                var cell_element = element.parents('.cell');\n                var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n                var cell = Jupyter.notebook.get_cell(index);\n                cell.metadata.perso = tags;\n            }\n        });\n        require(['setTags'], function(setTags) {\n            setTags(element, {\"hello\": \"1\"});\n        });\n        ",
+      "application/javascript": "\n        require(['setTags'], function(setTags) {\n            setTags(element, {\"hello\": \"1\"});\n        });\n        ",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
