--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 22:02:20.\n"
+      "Please upload this notebook on Moodle by 22:05:01.\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
     },
     {
      "data": {
-      "application/javascript": "\n        require(['setTags'], function(setTags) {\n            setTags(element, {\"hello\": \"1\"});\n        });\n        ",
+      "application/javascript": "\n        require(['setTags'], function(setTags) {\n            setTags(element, \"test\");\n        });\n        ",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
