--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 22:05:01.\n"
+      "Please upload this notebook on Moodle by 22:10:59.\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "# First run this cell\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from test_utils import test, due_time, d\n",
+    "from test_utils import test, due_time, d, _set_tags\n",
     "due_time()"
    ]
   },
@@ -161,7 +161,8 @@
    ],
    "source": [
     "# Run this cell to verify your solution\n",
-    "test(jump_game)"
+    "test(jump_game)\n",
+    "_set_tags(\"test\")"
    ]
   },
   {
