--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 22:10:59.\n"
+      "Please upload this notebook on Moodle by 22:36:19.\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "# First run this cell\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from test_utils import test, due_time, d, _set_tags\n",
+    "from test_utils import test, due_time, d\n",
     "due_time()"
    ]
   },
@@ -40,7 +40,17 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "require.undef('setTags');\ndefine('setTags', function() {\n    return function(element, tags) {\n        var cell_element = element.parents('.cell');\n        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n        var cell = Jupyter.notebook.get_cell(index);\n        cell.metadata.tags = tags;\n    }\n});\n",
+      "application/javascript": [
+       "require.undef('setTags');\n",
+       "define('setTags', function() {\n",
+       "    return function(element, tags) {\n",
+       "        var cell_element = element.parents('.cell');\n",
+       "        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
+       "        var cell = Jupyter.notebook.get_cell(index);\n",
+       "        cell.metadata.perso = tags;\n",
+       "    }\n",
+       "});\n"
+      ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -57,7 +67,7 @@
     "        var cell_element = element.parents('.cell');\n",
     "        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
     "        var cell = Jupyter.notebook.get_cell(index);\n",
-    "        cell.metadata.tags = tags;\n",
+    "        cell.metadata.perso = tags;\n",
     "    }\n",
     "});"
    ]
@@ -122,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -136,9 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "9bb22fc4",
-   "metadata": {},
+   "metadata": {
+    "perso": [
+     "test",
+     "test2"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -150,7 +165,13 @@
     },
     {
      "data": {
-      "application/javascript": "\n        require(['setTags'], function(setTags) {\n            setTags(element, \"test\");\n        });\n        ",
+      "application/javascript": [
+       "\n",
+       "        require(['setTags'], function(setTags) {\n",
+       "            setTags(element, [\"test\", \"test2\"]);\n",
+       "        });\n",
+       "        "
+      ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -162,7 +183,24 @@
    "source": [
     "# Run this cell to verify your solution\n",
     "test(jump_game)\n",
-    "_set_tags(\"test\")"
+    "l = [\"test\", \"test2\"]\n",
+    "# print(l)\n",
+    "_set_tags(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c623067",
+   "metadata": {
+    "perso": [
+     "hello",
+     "hi"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "%tag hello hi"
    ]
   },
   {
@@ -186,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ed95178d",
    "metadata": {},
    "outputs": [],
@@ -222,16 +260,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "93f9522f",
    "metadata": {
+    "perso": [
+     "remove-cells"
+    ],
     "tags": [
      "remove-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        require(['setTags'], function(setTags) {\n",
+       "            setTags(element, [\"remove-cells\"]);\n",
+       "        });\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
    "source": [
-    "%tag remove-cell\n",
+    "%tag remove-cells\n",
     "print(\"hello\")"
    ]
   },
@@ -240,6 +305,10 @@
    "execution_count": null,
    "id": "3a52b8aa",
    "metadata": {
+    "perso": [
+     "hello",
+     "hi"
+    ],
     "tags": [
      "remove-cell"
     ]
@@ -249,7 +318,7 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
