--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -20,7 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 22:36:19.\n"
+      "Please upload this notebook on Moodle by 22:54:50.\n"
      ]
     }
    ],
@@ -28,7 +28,7 @@
     "# First run this cell\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from test_utils import test, due_time, d\n",
+    "from test_utils import test, due_time, d, _set_tags_bis\n",
     "due_time()"
    ]
   },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -146,13 +146,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "9bb22fc4",
    "metadata": {
-    "perso": [
-     "test",
-     "test2"
-    ]
+    "perso": {
+     "1": {
+      "fcount": 5,
+      "ftime": 0,
+      "time": "22:45:05"
+     },
+     "n": 1
+    }
    },
    "outputs": [
     {
@@ -167,8 +171,17 @@
      "data": {
       "application/javascript": [
        "\n",
+       "        require.undef('setTags');\n",
+       "        define('setTags', function() {\n",
+       "            return function(element, tags) {\n",
+       "                var cell_element = element.parents('.cell');\n",
+       "                var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
+       "                var cell = Jupyter.notebook.get_cell(index);\n",
+       "                cell.metadata.perso = tags;\n",
+       "            }\n",
+       "        });\n",
        "        require(['setTags'], function(setTags) {\n",
-       "            setTags(element, [\"test\", \"test2\"]);\n",
+       "            setTags(element, {\"n\": 1, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:45:05\"}});\n",
        "        });\n",
        "        "
       ],
@@ -183,9 +196,10 @@
    "source": [
     "# Run this cell to verify your solution\n",
     "test(jump_game)\n",
-    "l = [\"test\", \"test2\"]\n",
+    "# l = [\"test\", \"test2\"]\n",
+    "# d = {1: [5,2,10]}\n",
     "# print(l)\n",
-    "_set_tags(l)"
+    "# _set_tags_bis(d)"
    ]
   },
   {
@@ -224,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ed95178d",
    "metadata": {},
    "outputs": [],
@@ -234,7 +248,7 @@
     "import json\n",
     "\n",
     "def _set_tags(tags):\n",
-    "    assert all(map(lambda t: isinstance(t, str), tags))\n",
+    "#     assert all(map(lambda t: isinstance(t, str), tags))\n",
     "    display(Javascript(\n",
     "        \"\"\"\n",
     "        require(['setTags'], function(setTags) {\n",
@@ -260,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "93f9522f",
    "metadata": {
     "perso": [
@@ -270,31 +284,7 @@
      "remove-cell"
     ]
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        require(['setTags'], function(setTags) {\n",
-       "            setTags(element, [\"remove-cells\"]);\n",
-       "        });\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%tag remove-cells\n",
     "print(\"hello\")"
