--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9bb22fc4",
    "metadata": {
     "perso": {
@@ -155,7 +155,12 @@
       "ftime": 0,
       "time": "22:45:05"
      },
-     "n": 1
+     "2": {
+      "fcount": 5,
+      "ftime": 0,
+      "time": "22:45:17"
+     },
+     "n": 2
     }
    },
    "outputs": [
@@ -181,7 +186,7 @@
        "            }\n",
        "        });\n",
        "        require(['setTags'], function(setTags) {\n",
-       "            setTags(element, {\"n\": 1, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:45:05\"}});\n",
+       "            setTags(element, {\"n\": 2, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:45:05\"}, \"2\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:45:17\"}});\n",
        "        });\n",
        "        "
       ],
