add logs via metadata of the cell

--- a/PS-I dynamic programming.ipynb
+++ b/PS-I dynamic programming.ipynb
@@ -20,16 +20,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 22:54:50.\n"
+      "Please upload this notebook on Moodle by 23:12:43.\n"
      ]
     }
    ],
    "source": [
-    "# First run this cell\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
+    "# First, run this cell\n",
     "from test_utils import test, due_time, d, _set_tags_bis\n",
     "due_time()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfd51d27",
+   "metadata": {},
+   "source": [
+    "Then, run the cell below"
    ]
   },
   {
@@ -146,21 +152,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "9bb22fc4",
    "metadata": {
     "perso": {
      "1": {
       "fcount": 5,
       "ftime": 0,
-      "time": "22:45:05"
+      "time": "23:02:56"
      },
      "2": {
       "fcount": 5,
       "ftime": 0,
-      "time": "22:45:17"
+      "time": "23:03:17"
      },
-     "n": 2
+     "3": {
+      "fcount": 5,
+      "ftime": 0,
+      "time": "23:03:31"
+     },
+     "n": 3
     }
    },
    "outputs": [
@@ -186,7 +197,7 @@
        "            }\n",
        "        });\n",
        "        require(['setTags'], function(setTags) {\n",
-       "            setTags(element, {\"n\": 2, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:45:05\"}, \"2\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:45:17\"}});\n",
+       "            setTags(element, {\"n\": 3, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"23:02:56\"}, \"2\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"23:03:17\"}, \"3\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"23:03:31\"}});\n",
        "        });\n",
        "        "
       ],
@@ -200,116 +211,8 @@
    ],
    "source": [
     "# Run this cell to verify your solution\n",
-    "test(jump_game)\n",
-    "# l = [\"test\", \"test2\"]\n",
-    "# d = {1: [5,2,10]}\n",
-    "# print(l)\n",
-    "# _set_tags_bis(d)"
+    "test(jump_game)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c623067",
-   "metadata": {
-    "perso": [
-     "hello",
-     "hi"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%tag hello hi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12747f2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%javascript\n",
-    "require.undef('setTags');\n",
-    "define('setTags', function() {\n",
-    "    return function(element, tags) {\n",
-    "        var cell_element = element.parents('.cell');\n",
-    "        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
-    "        var cell = Jupyter.notebook.get_cell(index);\n",
-    "        cell.metadata.tags = tags;\n",
-    "    }\n",
-    "});"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed95178d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.core.magic import register_cell_magic, register_line_cell_magic\n",
-    "from IPython.display import Javascript, display\n",
-    "import json\n",
-    "\n",
-    "def _set_tags(tags):\n",
-    "#     assert all(map(lambda t: isinstance(t, str), tags))\n",
-    "    display(Javascript(\n",
-    "        \"\"\"\n",
-    "        require(['setTags'], function(setTags) {\n",
-    "            setTags(element, %s);\n",
-    "        });\n",
-    "        \"\"\" % json.dumps(tags)\n",
-    "    ))\n",
-    "\n",
-    "@register_line_cell_magic\n",
-    "def tag(line, cell=None):\n",
-    "    _set_tags(line.split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "547c4b2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93f9522f",
-   "metadata": {
-    "perso": [
-     "remove-cells"
-    ],
-    "tags": [
-     "remove-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%tag remove-cells\n",
-    "print(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a52b8aa",
-   "metadata": {
-    "perso": [
-     "hello",
-     "hi"
-    ],
-    "tags": [
-     "remove-cell"
-    ]
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
