remove unwanted files and clear outputs and metadata

--- a/Problem_solving_exercise_download_as.ipynb
+++ b/Problem_solving_exercise_download_as.ipynb
@@ -12,17 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d3893c62",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please upload this notebook on Moodle by 22:22:22.\n"
+      "Please upload this notebook on Moodle by 15:21:11.\n"
      ]
     }
    ],
@@ -30,6 +28,14 @@
     "# First, run this cell\n",
     "from test_utils import test, due_time, d, _set_tags_bis\n",
     "due_time()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4a9f0af",
+   "metadata": {},
+   "source": [
+    "You can download the file using **File > Download as > Notebook (.ipynb)**."
    ]
   },
   {
@@ -42,25 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3e43a47e",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/javascript": [
-       "require.undef('setTags');\n",
-       "define('setTags', function() {\n",
-       "    return function(element, tags) {\n",
-       "        var cell_element = element.parents('.cell');\n",
-       "        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
-       "        var cell = Jupyter.notebook.get_cell(index);\n",
-       "        cell.metadata.perso = tags;\n",
-       "    }\n",
-       "});\n"
-      ],
+      "application/javascript": "require.undef('setTags');\ndefine('setTags', function() {\n    return function(element, tags) {\n        var cell_element = element.parents('.cell');\n        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n        var cell = Jupyter.notebook.get_cell(index);\n        cell.metadata.perso = tags;\n    }\n});\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -114,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "4fe3c744",
    "metadata": {},
    "outputs": [],
@@ -142,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -156,21 +150,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "9bb22fc4",
    "metadata": {
     "perso": {
      "1": {
       "fcount": 5,
       "ftime": 0,
-      "time": "22:19:28"
+      "time": "15:11:24"
      },
      "2": {
       "fcount": 5,
       "ftime": 0,
-      "time": "22:19:33"
+      "time": "15:11:27"
      },
-     "n": 2
+     "3": {
+      "fcount": 5,
+      "ftime": 0,
+      "time": "15:11:29"
+     },
+     "4": {
+      "fcount": 5,
+      "ftime": 0,
+      "time": "15:11:32"
+     },
+     "n": 4
     }
    },
    "outputs": [
@@ -184,22 +188,7 @@
     },
     {
      "data": {
-      "application/javascript": [
-       "\n",
-       "        require.undef('setTags');\n",
-       "        define('setTags', function() {\n",
-       "            return function(element, tags) {\n",
-       "                var cell_element = element.parents('.cell');\n",
-       "                var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n",
-       "                var cell = Jupyter.notebook.get_cell(index);\n",
-       "                cell.metadata.perso = tags;\n",
-       "            }\n",
-       "        });\n",
-       "        require(['setTags'], function(setTags) {\n",
-       "            setTags(element, {\"n\": 2, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:19:28\"}, \"2\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"22:19:33\"}});\n",
-       "        });\n",
-       "        "
-      ],
+      "application/javascript": "\n        require.undef('setTags');\n        define('setTags', function() {\n            return function(element, tags) {\n                var cell_element = element.parents('.cell');\n                var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n                var cell = Jupyter.notebook.get_cell(index);\n                cell.metadata.perso = tags;\n            }\n        });\n        require(['setTags'], function(setTags) {\n            setTags(element, {\"n\": 4, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:24\"}, \"2\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:27\"}, \"3\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:29\"}, \"4\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:32\"}});\n        });\n        ",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -230,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.9"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false,
