--- a/Problem_solving_exercise.ipynb
+++ b/Problem_solving_exercise.ipynb
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d3893c62",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please upload this notebook on Moodle by 15:21:11.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First, run this cell\n",
     "from test_utils import test, due_time, d, _set_tags_bis\n",
     "due_time()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4a9f0af",
+   "metadata": {},
+   "source": [
+    "After solving this exercise, please download the file using **File > Download as > Notebook (.ipynb)**. Keep in mind that the primary objective is for you to exert your best effort. This problem is challenging so you might only complete it partially within the allocated time (10 minutes)."
    ]
   },
   {
@@ -40,21 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3e43a47e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "require.undef('setTags');\ndefine('setTags', function() {\n    return function(element, tags) {\n        var cell_element = element.parents('.cell');\n        var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n        var cell = Jupyter.notebook.get_cell(index);\n        cell.metadata.perso = tags;\n    }\n});\n",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "require.undef('setTags');\n",
@@ -100,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4fe3c744",
    "metadata": {},
    "outputs": [],
@@ -128,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f8a3b049",
    "metadata": {},
    "outputs": [],
@@ -142,53 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9bb22fc4",
-   "metadata": {
-    "perso": {
-     "1": {
-      "fcount": 5,
-      "ftime": 0,
-      "time": "15:11:24"
-     },
-     "2": {
-      "fcount": 5,
-      "ftime": 0,
-      "time": "15:11:27"
-     },
-     "3": {
-      "fcount": 5,
-      "ftime": 0,
-      "time": "15:11:29"
-     },
-     "4": {
-      "fcount": 5,
-      "ftime": 0,
-      "time": "15:11:32"
-     },
-     "n": 4
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ Your implementation failed 5 test(s) out of 5 tests\n",
-      "    ✅ but you implementation is fast enough 🚀.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": "\n        require.undef('setTags');\n        define('setTags', function() {\n            return function(element, tags) {\n                var cell_element = element.parents('.cell');\n                var index = Jupyter.notebook.get_cell_elements().index(cell_element);\n                var cell = Jupyter.notebook.get_cell(index);\n                cell.metadata.perso = tags;\n            }\n        });\n        require(['setTags'], function(setTags) {\n            setTags(element, {\"n\": 4, \"1\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:24\"}, \"2\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:27\"}, \"3\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:29\"}, \"4\": {\"fcount\": 5, \"ftime\": 0, \"time\": \"15:11:32\"}});\n        });\n        ",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Run this cell to verify your solution\n",
     "test(jump_game)"
