--- a/Problem_solving_exercise.ipynb
+++ b/Problem_solving_exercise.ipynb
@@ -112,7 +112,7 @@
    "id": "6784bef9",
    "metadata": {},
    "source": [
-    "Implement you solution on the cell below and test you code."
+    "Implement you solution on the cell below and test you code. You can not change the input of the function. However, you can change whatever else you want. If you want to create a new cell to write other code in, press the A key. "
    ]
   },
   {
@@ -126,7 +126,7 @@
     "def jump_game(array):\n",
     "    '''PUT YOU CODE INSIDE THIS FUNCTION'''\n",
     "\n",
-    "    return array"
+    "    return None"
    ]
   },
   {
@@ -138,6 +138,13 @@
    "source": [
     "# Run this cell to verify your solution\n",
     "test(jump_game)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In case you have an error \"TypeError: unhashable type: ...\", try casting this type into a tuple first."
    ]
   }
  ],
